Fix overflow

--- a/src/app/causes/causes.component.css
+++ b/src/app/causes/causes.component.css
@@ -3,10 +3,11 @@
     color: #333333;
     display: inline-flex;
     width: 550px;
-    height: 550px;
+
     background: #fafafa;
     margin: 10px;
     padding: 10px;
+    overflow: visible;
 }
 
 .cause-title a{
